--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,29 @@
 <resources>
-    <string name="app_name">atividade1</string>
-    <string name="action_settings">Settings</string>
-    <string name="title_activity_principal">principal</string>
-    <string name="title_activity_aplicativos">Aplicativos</string>
+    <string name="app_name">Project</string>
+    <string name="title_activity_principal">Main</string>
+    <string name="title_activity_calculo_imc">Calculate BMI</string>
+    <string name="lg">Login</string>
+    <string name="al">Heigth</string>
+    <string name="ps">Weight</string>
+    <string name="cl">Calculate</string>
+    <string name="lp">Clear</string>
+    <string name="em" translatable="false">Email</string>
+    <string name="sn">Password</string>
+    <string name="imc">BIM</string>
+    <string name="title_activity_conversao">Converter</string>
+    <string name="title_activity_main" translatable="false">Login</string>
+    <string name="cn">Convert</string>
+    <string name="cnvt">Convert to</string>
+    <string name="cnvrt">Convert</string>
+    <string name="ldp">Products List</string>
+
     <string-array name="tipo">
+        <item>KB</item>
         <item>MB</item>
         <item>GB</item>
+        <item>TB</item>
     </string-array>
-    <string name="title_activity_conversor">conversor</string>
+    <string name="title_activity_sobre">About</string>
+    <string name="sb">About</string>
+    <string name="title_activity_lista_produtos">ListaProdutos</string>
 </resources>
